skateable/client/css/app-home.css
::-webkit-scrollbar {
    width: 0px;
    background: transparent;
}

* {
    font-family: 'Acme', sans-serif;
}
html, body { 
    height: 100%;
    margin: 0;
    padding: 0;
    overflow-y: hidden;
    font-family: Georgia, sans-serif;
}

a {
    target-name: new;
    target-new: tab;
    text-decoration: none;
    cursor: pointer;
}

#container {
    width: 100%;
    height: 100%;
    position: relative;
}

#side-bar {
    height: 100%;
    width: 0;
    position: fixed;
    overflow-x: hidden;
    top: 0;
    left: 0;
    background-color: darkgray;
    z-index: 1;
    transition: 0.2s;
	
}

#side-bar a {
    padding: 8px, 8px, 8px, 32px;
    top: 50%;
    text-decoration: none;
    display: block;
    color: #f1f1f1;
    font-family: 'Acme', sans-serif;
}



#side-bar a:hover {
    color: black;
}

#sideList {
    padding-top: 40%;
}

#side-bar .list {
    margin-top: 25%;
    text-align: center;
    font-size: 25px;
    visibility: hidden;
}

#side-bar .login {
    margin-top: 40%;
    text-align: center;
    font-size: 25px;
    visibility: hidden;
}

.clsbtn {
    cursor: pointer;
    padding-right: 10px;
    top: 0;
    float: right;
    font-size: 40px;
}

#top-bar {
    width: 100%;
    height: 10%;
    background-color: darkgray;
    border-color: black;
    display: flex;
    flex-wrap: wrap;
	border-bottom: 2px solid black;
}

#menu-button {
    height: 100%;
    width: 5%;
    max-width: 5%;
    text-align: center;
    display: block;
    vertical-align: middle;
    background-color: darkgray;
    border: none;
}

#pinButton {
    height: 100%;
    width: 5%;
    max-width: 5%;
    text-align: center;
    display: block;
    vertical-align: middle;
    background-color: darkgray;
    border: none;
    
}

#yesButton {
    background-color: aqua;
    color: black;
    border: none;
}

#current-location {
    background-color: white;
    color: black;
    width: 30px;
    cursor: pointer;
}

.pac-container {
    z-index: 10000;
    position: fixed;
    display: inline-block;
    float: left;
}

.modal {
    z-index: 20;
}

.modal-backdrop {
    z-index: 10;
}

.modal-header {
    text-align: center;
    align-content: center;
}

.modal-body {
    text-align: center;
    align-content: center;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    width: 70%;
}
.modal-body2 {
	text-align: left;
    align-content: center;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    width: 90%;
}
.modal-body3 {
	text-align: center;
    align-content: center;
    justify-content: center;
    width: 90%;
}
ul {
  list-style-type: none;
}
#pinName {
    margin-left: 10px;
    height: auto;
}

#places-search {
    width: 100%;
}

#commentInput {
    width: 100%;
    min-height: 50px;
    height: 10%;
    overflow: hidden;
}

#ratingButtons {
    width: 0%;
}
.modal-title{
	font-size: 25px;
}
h7, h8, h9{
width: 100%;
	text-align: center;
}
#meetupDay{
	margin-left: 10px;
	margin-bottom: 10px;
    height: auto;
}
#meetuptime{
	margin-left: 10px;
	margin-bottom: 10px;
    height: auto;
}
#description{
	width: 100%;
    min-height: 50px;
    height: 10%;
    overflow: hidden;
	margin-bottom: 10px;
}
#yesbttn{
	margin-left: 5px;
}
#nobttn{
	margin-left: 5px;

}
#menu-button:focus {
    outline: 0;
}

#menu {
    z-index: 1;
    display: relative;
    margin-right: auto;
    margin-left: auto;
    height: 45%;
    cursor: pointer;
}

#logo {
 	width: 90%;
    height: 100%;
    text-align: center;
}

#logo img {
	height: 100%;
    cursor: pointer;
}

#map { 
    bottom: 0px;
    height: 90%;
    left: 0px;
    position: fixed;    
    right: 0px;
}

#error {
    position: fixed;
    top 350px;
    left: 5%;
    width: 20%;
}

#content-info-window {
    text-align: center;
    width: 300px;
	border-radius: 4px;
}

#comment-box {
    width: 100%;
    max-height: 50%;
    min-height: 100px;
    overflow-y: scroll;
    height: auto;
    border: 2px black solid;
    display: grid;
    vertical-align: middle;
    align-content: center;
    text-align: center;
    color: grey;
}

#comment {
    font-style: italic;
    font-size: 18px;
    margin: 0 auto;
}

.fa {
    color: grey;
}

.fa:active {
    color: black;
}
#commentButton:focus {
    outline: 0;
}

#arrowDiv {
    width: 100%;
    text-align: center;
    margin: 0 auto;
    vertical-align: middle;
    display: inline;
    float: none;
    bottom: 0;
}

.arrowBtn {
    border-radius: 4px;
    border: none;
    text-decoration: none;
    background-color: transparent;
    width: 30px;
}

#leftArrowCmt {
    font-size: 15px;
    
}
#rightArrowCmt {
    font-size: 15px;
}

#leftArrowCmt:focus {
    outline: 0;
}
#rightArrowCmt:focus {
    outline: 0;
}


#commentButton {
    font-size: 30px;
    border-radius: 4px;
    border: none;
    position: absolute;
    text-decoration: none;
    background-color: transparent;
    color: white;
}

#buttons {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.yayBtn {
    width: 50px;
    height: 30px;
    color: white;
    background-color: green;
    float: left;
    border: none;
    text-decoration: none;
    margin-top: 15px;
    margin-left: 5px;
    margin-right: 5px;
	border-radius: 4px;

}

.nayBtn {
    width: 50px;
    height: 30px;
    color: white;
    background-color: red;
    float: right;
    border: none;
    text-decoration: none;
    margin-top: 15px;
    margin-left: 5px;
    margin-right: 5px;
	border-radius: 4px;
}

.box-third {
    width: 33.3%;
    text-align: center;
    align-content: center;
}
.list-li {
    width: 100%;
    padding: 15px 15px 15px 15px;
    background-color: lightgray;
    border: 2px solid;
    border-radius: 25px;
    border-color: black;
}
#favBtn {
    margin-bottom: 10px;
    background-color: yellow;
    color: black;
    margin: 4px 0;
    border: none;
    cursor: pointer;
    width: 28%;
    text-align: center;
    border-radius: 4px;
}
#meetupBtn
{
	background-color:  #0066cc;
    color: white;
    margin: 4px 0;
    border: none;
    cursor: pointer;
    width: 28%;
    text-align: center;
    border-radius: 4px;
}
#viewmeetupBtn
{
	background-color: navy;
    color: white;
    margin: 4px 0;
    border: none;
    cursor: pointer;
    width: 28%;
    text-align: center;
    border-radius: 4px;
}

